--- a/Petapoco/Petapoco.csproj
+++ b/Petapoco/Petapoco.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Models\PetaPoco.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SalesMade.cs" />
+    <Compile Include="SalesPeople.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
