--- a/Petapoco/App.config
+++ b/Petapoco/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <connectionStrings>
-    <add name="dbstring" connectionString="Data Source=(local)\SQLExpress;Initial Catalog=dotnet; Integrated Security=true"/>
+    <add name="dbstring" connectionString="Data Source=NII\SQLExpress;Initial Catalog=dotnet; Integrated Security=true"/>
   </connectionStrings>
 </configuration>
